# aurex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/basic/: ax.toml
examples/cli-orders/: ax.toml
examples/cli-orders/src/com/example/orders/: Main.java
examples/json-report/: ax.toml  geralt.toml
examples/json-report/src/com/example/report/: Main.java  Summary.java
examples/text-utils/: ax.toml
examples/text-utils/src/com/example/text/: Main.java
examples/vertx/: ax.toml
examples/vertx/src/com/example/vertx/: Main.java
plugins/intellij/: README.md  build.gradle.kts  settings.gradle.kts
plugins/intellij/scripts/: test.ps1
plugins/intellij/src/main/java/dev/aurex/intellij/: AurexCommand.java  AurexProjectLocator.java  AurexRunner.java
plugins/intellij/src/main/java/dev/aurex/intellij/actions/: AurexActionSupport.java  BuildAurexProjectAction.java  CleanAurexProjectAction.java  FormatAurexProjectAction.java  InitAurexProjectAction.java  OpenAurexTomlAction.java  RunAurexProjectAction.java  TestAurexProjectAction.java
plugins/intellij/src/main/java/dev/geralt/intellij/: GeraltCommand.java  GeraltProjectLocator.java  GeraltRunner.java
plugins/intellij/src/test/java/dev/aurex/intellij/: AurexProjectLocatorTest.java
plugins/intellij/src/test/java/dev/geralt/intellij/: GeraltProjectLocatorTest.java
plugins/vscode/: .vscodeignore  README.md  package.json
plugins/vscode/snippets/: aurex-toml.code-snippets  ax-toml.code-snippets  geralt-toml.code-snippets
plugins/vscode/src/: aurexProjects.js  extension.js  geraltProjects.js
plugins/vscode/test/: aurexProjects.test.js  geraltProjects.test.js
src/: config.rs  jar.rs  lib.rs  main.rs  manifest.rs  maven.rs  ui.rs
tests/: cli_output.rs  commands.rs  dependencies.rs  examples.rs  init_test.rs  java_command.rs
(+5 files in other folders)
