[package]
name = "aurex"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ax"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
crossterm = "0.27.0"
# Keep this compatible with the Cargo 1.75 toolchain used by the repo.
reqwest = { version = "=0.11.27", default-features = false, features = ["blocking", "rustls-tls"] }
roxmltree = "0.20.0"
serde = { version = "1.0.202", features = ["derive"] }
toml = "0.8.13"
toml_edit = "0.22.13"
# Pin reqwest's transitive URL stack below crates that require Edition 2024.
url = "=2.5.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
